# speech-to-specify

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  sample_input.txt
docs/: map.md  relatorio_falhas_clausulas_petreas.md  relatorio_falhas_v2.md  session_naming_logic.md  telegram_interaction_guide.md  telegram_interface_specification.md  tutorial_adding_oracles.md  tutorial_clickable_lists.md  tutorial_context_management.md  tutorial_pipeline_prompts.md  tutorial_tts_extensibility.md
prompts/: constitution.md  planning.md  prompt_constitution.md  prompt_plan.md  prompt_specify.md  prompt_tasks.md  semantic_normalization.md  specification.md  tasks.md  unalterable_clauses.md
prompts/oracles/: cetico.md  empatico  empatico.md  otimista.md  pragmatico.md  visionario.md
scripts/: check_all.bat  check_all.py  check_all.sh  check_explorations.py  check_file_sizes.py  check_imports.py  generate_map.py  validate_env.py
scripts/shared/: __init__.py  result.py
sessions/: .gitkeep
specs/001-narrative-artifact-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-telegram-contract-fix/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-telegram-voice-orchestrator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-auto-session-audio/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-resilient-voice-capture/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-telegram-ux-overhaul/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-semantic-session-search/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-contextual-oracle-feedback/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-async-audio-response/: data-model.md  plan.md  quickstart.md  (+3 more)
src/: __init__.py
tests/: __init__.py  conftest.py  test_openai_connection.py
(+170 files in other folders)
